--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -61,8 +61,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "869168a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fx에서 x=3에서의 순간변화율(미분계수) 16 입니다\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sympy import Derivative, symbols\n",
+    "\n",
+    "# 평균변화율을 구할 수 있는 함수를 정의함\n",
+    "x = symbols('x') # x를 기호변수화\n",
+    "fx = 2 * x ** 2 + 4 * x + 7\n",
+    "\n",
+    "\n",
+    "# Derivative() 객체 생성\n",
+    "# subs() 메서드를 사용하여 x=3에서의 미분계수 f'(3)을 구함\n",
+    "fprime = Derivative(fx, x).doit() # x에 대해 미분\n",
+    "n = fprime.subs({x: 3})\n",
+    "\n",
+    "print('fx에서 x=3에서의 순간변화율(미분계수)', n, \"입니다\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2f59b4b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 4 x + 4$"
+      ],
+      "text/plain": [
+       "4*x + 4"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "도함수 구하기\n",
+    "'''\n",
+    "\n",
+    "from sympy import Derivative, symbols\n",
+    "\n",
+    "# x 변수와 함수 fx를 정의\n",
+    "x = symbols('x')\n",
+    "fx = 2 * x ** 2 + 4 * x + 7\n",
+    "\n",
+    "Derivative(fx, x).doit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8ab38958",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 4 x$"
+      ],
+      "text/plain": [
+       "4*x"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = symbols('x')\n",
+    "fx = 2 * x ** 2 - 1\n",
+    "Derivative(fx, x).doit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c7607dfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6*x**2 + 6*x + 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as sym\n",
+    "\n",
+    "# x 변수를 선언하고 diff() 함수를 사용하여 미분을 계산\n",
+    "# x = sym.Symbol('x')\n",
+    "x = symbols('x')\n",
+    "a = sym.diff((2 * x ** 3 + 3 * x ** 2 + x + 1), x)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d967fb1e",
    "metadata": {},
    "outputs": [],
    "source": []
